Wed May 16 01:54:25 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* tests/termgentest.cc: Add a test for parsing of capitalised words
	  with a prefix, which currently fails.

Wed May 16 01:09:39 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* include/xapian/termgenerator.h,queryparser/termgenerator.cc: Add
	  a method to get the current document from the term generator.
	  Helps avoid users having to pass around a structure encapsulating
	  the generator and the document assigned to it.

Wed May 16 00:50:07 BST 2007  Olly Betts <olly@survex.com>

	* docs/deprecation.rst: Add <xapian/output.h>.

Tue May 15 22:46:39 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* tests/termgentest.cc: Use resize(0) instead of clear(), for g++2.95

Tue May 15 20:25:07 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* net/remoteconnection.cc: Add a comment noting why we test
	  __STDC_SECURE_LIB__ even though its an undocumented macro.

Tue May 15 20:14:51 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* tests/termgentest.cc: Add several more tests - some converted
	  from the query tests, some more initial tests, and some number
	  tests.

Tue May 15 18:31:21 BST 2007  Olly Betts <olly@survex.com>

	* queryparser/termgenerator_internal.cc: Revert previous change - we
	  need to generate Zibm and Zpc from text `I.B.M. P.C.' or else a
	  search for `ibm pc' won't match.

Tue May 15 18:22:44 BST 2007  Olly Betts <olly@survex.com>

	* queryparser/termgenerator_internal.cc: Sort out stemming of
	  initials.

Tue May 15 18:04:17 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* tests/termgentest.cc: Add some more tests, and rework the array
	  of tests so that there's just a single string holding any options
	  we want to set for the following tests.

Tue May 15 16:49:17 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* tests/Makefile.am,tests/termgentest.cc: Add new test file, for