@@ -85,11 +85,11 @@ static test test_simple[] = {
 
     // Test parsing some capitalised words
     { "", "hello World Test", "Zhello:1 Ztest:1 Zworld:1 hello[1] test[3] world[2]" },
-    { "prefix=XA", "hello", "ZXAhello:1 XAhello[1]" },
-    { "prefix=XA", "hello World Test", "ZXAhello:1 ZXAtest:1 ZXAworld:1 XAhello[1] XAtest[3] XAworld[2]" },
+    { "prefix=XA", "hello", "XAhello[1] ZXAhello:1" },
+    { "prefix=XA", "hello World Test", "XAhello[1] XAtest[3] XAworld[2] ZXAhello:1 ZXAtest:1 ZXAworld:1" },
 
     // Assorted tests, corresponding to tests in queryparsertest.
-    { "", "time_t", "Ztime_t:1 time_t[1]" },
+    { "prefix=", "time_t", "Ztime_t:1 time_t[1]" },
     { "", "stock -cooking", "Zcook:1 Zstock:1 cooking[2] stock[1]" },
     { "", "d- school report", "Zd:1 Zreport:1 Zschool:1 d[1] report[3] school[2]" },
     { "", "gtk+ -gnome", "Zgnome:1 Zgtk+:1 gnome[2] gtk+[1]" },
